--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             sizes="16x16"
             href="img/icons/favicon-16x16.png"
         >
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="manifest.json">
         <meta name="theme-color" content="#4DBA87">
         <meta name="apple-mobile-web-app-capable" content="no">
         <meta name="apple-mobile-web-app-status-bar-style" content="default">
